--- a/index.html
+++ b/index.html
@@ -16,12 +16,10 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <!-- <link href="assets/vendor/aos/aos.css" rel="stylesheet"> -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <!-- <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
 
   <link rel="stylesheet" href="./assets/vendor/bootstrap-icons/bootstrap-icons.css">
   <link rel="stylesheet" href="./assets/css/global-styles.css">
@@ -32,12 +30,7 @@
   <link rel="stylesheet" href="./assets/css/media-q-desktop.css">
 
  <style>
-  /* #carouselExampleDark {
-    width: 80%;
-    height: 50vh;
-    margin: 1em auto 3em;
-  } */
-
+ 
   .carousel-inner,
   .carousel-inner .carousel-item
   {
@@ -589,22 +582,22 @@
 
           <div class="col-lg-6">
             <div class="row">
-              <div class="col-lg-6 info">
+              <div class="col-lg-6 info reveal">
                 <i class="bx bx-map"></i>
                 <h4>ADDRESS</h4>
                 <p>A108 Adam Street,<br>New York, NY 535022</p>
               </div>
-              <div class="col-lg-6 info">
+              <div class="col-lg-6 info reveal">
                 <i class="bx bx-phone"></i>
                 <h4>CALL US</h4>
                 <p>+1 5589 55488 55<br>+1 5589 22548 64</p>
               </div>
-              <div class="col-lg-6 info">
+              <div class="col-lg-6 info reveal">
                 <i class="bx bx-envelope"></i>
                 <h4>EMAIL US</h4>
                 <p>contact@example.com<br>info@example.com</p>
               </div>
-              <div class="col-lg-6 info">
+              <div class="col-lg-6 info reveal">
                 <i class="bx bx-time-five"></i>
                 <h4>WORKING HOURS</h4>
                 <p>Mon - Fri: 9AM to 5PM<br>Sunday: 9AM to 1PM</p>
@@ -735,13 +728,9 @@
   <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <!-- <script src="assets/vendor/php-email-form/validate.js"></script> -->
 
-  <!-- <script src="assets/js/carousel.js"></script> -->
+  <!-- Scroll Animation Script -->
   <script src="./src/js/scroll-animations.js"></script>
-  <!-- Gallery Swiper Script -->
-  <!-- <script src="assets/js/gallery-swiper.js"></script> -->
-  <!-- <script src="assets/js/gallery.js"></script> -->
   <!-- Testimonial Swiper Script -->
   <script src="./src/js/testimonial-swiper.js"></script>
   <!-- FAQ Drop Down Script -->
